# advent-of-code-2024

./: Cargo.toml  README.md
input/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  19.txt  21.txt  22.txt  23.txt  24.txt  25.txt
src/: common.rs  day01_historian_hysteria.rs  day02_red_nosed_reports.rs  day03_mull_it_over.rs  day04_ceres_search.rs  day05_print_queue.rs  day06_guard_gallivant.rs  day07_bridge_repair.rs  day08_resonant_collinearity.rs  day09_disk_fragmenter.rs  day10_hoof_it.rs  day11_plutonian_pebbles.rs  day12_garden_groups.rs  day13_claw_contraption.rs  day14_restroom_redoubt.rs  day15_warehouse_woes.rs  day16_reindeer_maze.rs  day17_chronospatial_computer.rs  day18_ram_run.rs  day19_linen_layout.rs  day20_race_condition.rs  day21_keypad_conundrum.rs  day22_monkey_market.rs  day23_lan_party.rs  day24_crossed_wires.rs  day25_code_chronicle.rs  main.rs
src/common/: linear_algebra.rs  mod.rs  models.rs
