[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
utils = { git = "https://github.com/rudyhb/utils.git" }
rayon = "1.10.0"
regex = "1.11.1"
string-interner = "0.18.0"
anyhow = "1.0.93"
once_cell = "1.20.2"
derivative = "2.2.0"
thiserror = "2.0.8"
itertools = "0.13.0"